# robo_controller

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
build-script/: generate-debug-release  generate-opencv
extra_res/emergent_launcher/: README.md  README.txt
extra_res/emergent_launcher/lib/systemd/system/: emergent_launcher.service  pi-camera.service
extra_res/emergent_launcher/var/emergent_controller/: ScriptDBusThymio.aesl  boot-pi-camera.sh
include/: FrameStructure.h  SharedFrame.h  SharedQueue.h
include/config/: RobotConfig.h
include/configuration/: AsebaRobotConfiguration.h  EmergentRobotConfiguration.h  RobotConfiguration.h
include/controller/: RobotController.h  RobotControllerFactory.h  ThymioController.h  ThymioEmergentController.h  ThymioOAController.h
include/detector/: Detector.h  DetectorFactory.h  RobotDetector.h
include/manager/: RobotManager.h
include/network/: GrpcServer.h  RobotServer.h  RobotServiceClient.h  RobotServiceImpl.h  SimulationServiceImpl.h
include/robot/: Thymio.h
include/util/ea/: Gene.h
include/util/env/: Environment.h
include/util/neuralnetworks/: Elman.h  LayeredNeuralNetwork.h  MLP.h  NeuralNetwork.h  NeuralNetworkException.h  Perceptron.h  ReservoirNeuralNetwork.h
include/video/: VideoAnalyser.h  VideoHandler.h
messages/: CMakeLists.txt  simulation.proto
res/config/: BasicThymio.aesl  OAThymio.aesl
res/scripts/: emergent_launcher.service
src/: SharedFrame.cpp  SharedQueue.cpp  main.cpp
src/configuration/: EmergentRobotConfiguration.cpp
src/controller/: RobotControllerFactory.cpp  ThymioController.cpp  ThymioEmergentController.cpp  ThymioOAController.cpp
src/detector/: DetectorFactory.cpp  RobotDetector.cpp
src/manager/: RobotManager.cpp
src/network/: GrpcServer.cpp  RobotServer.cpp  RobotServiceClient.cpp  RobotServiceImpl.cpp  SimulationServiceImpl.cpp
src/util/ea/: Gene.cpp
src/util/env/: Environment.cpp
src/util/neuralnetworks/: Elman.cpp  LayeredNeuralNetwork.cpp  MLP.cpp  NeuralNetwork.cpp  NeuralNetworkException.cpp  Perceptron.cpp  ReservoirNeuralNetwork.cpp
src/video/: VideoAnalyser.cpp  VideoHandler.cpp
